@@ -13,9 +13,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+
+/** Service responsible for retrieving postal code details using the Bring API. */
 @Service
 public class BringService {
   private final RestTemplate restTemplate = new RestTemplate();
+
   @Value("${bring.api.url}")
   private String bringApiUrl;
 
@@ -24,16 +27,21 @@ public class BringService {
 
   @Value("${bring.api.key}")
   private String bringKey;
-  private Logger logger = LoggerFactory.getLogger(BringService.class);
+
+  private final Logger logger = LoggerFactory.getLogger(BringService.class);
+
   /**
-   * Retrieves location details using the Bring Postal Code API.
+   * Fetches geographic and administrative information for a given postal code using the Bring
+   * Postal Code Lookup API.
    *
    * @param postalCode The postal code to look up.
-   * @return A Location object enriched with data from the API.
+   * @return A {@link Location} object containing city, county, latitude, longitude, and the postal
+   *     code.
+   * @throws RuntimeException if the API call fails or returns an unexpected response.
    */
   public Location getLocationDetails(String postalCode) {
     // Build the full URL
-    String url = bringApiUrl + postalCode;
+    final String url = bringApiUrl + postalCode;
 
     // Create HttpHeaders and add the required Bring API headers
     HttpHeaders headers = new HttpHeaders();
@@ -44,17 +52,13 @@ public class BringService {
     HttpEntity<String> entity = new HttpEntity<>(headers);
     logger.info(String.valueOf(entity));
     // Make the API call using exchange(), which lets you pass in the headers
-    ResponseEntity<BringResponse> response = restTemplate.exchange(
-        url,
-        HttpMethod.GET,
-        entity,
-        BringResponse.class
-    );
+    ResponseEntity<BringResponse> response =
+        restTemplate.exchange(url, HttpMethod.GET, entity, BringResponse.class);
 
     if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
       BringResponse bringResponse = response.getBody();
-      //Since the response is a list of strings, we want to retrieve the first element
-      BringPostcode data = bringResponse.getPostalCodes().get(0);
+      // Since the response is a list of strings, we want to retrieve the first element
+      BringPostcode data = bringResponse.getPostalCodes().getFirst();
       Location location = new Location();
       location.setCity(data.getCity());
       location.setCounty(data.getCounty());
